update .gitignore to exclude generated sqlfiles and hidden files from version control

--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,9 @@
+# application specific files
+.*
+workspace/
+logs/
+frontend/db_connections.json
+
 # Byte-compiled / optimized / DLL files
 __pycache__/
 *.py[cod]
